# kegtron-gen1-api-proxy

./: .gitignore  .tool-versions  Makefile  None  README.md  alembic.ini  entrypoint.sh  kegtron.db  pyproject.toml
alembic/: env.py
alembic/versions/: 3c64ca435aae_initial_migration_create_devices_and_.py
config/: api.default.json  default.json  scanner.default.json
data/: seed_data.py
docs/: CONFIG_MIGRATION.md
docs/img/: logo.pxd
src/: api.py  app.py  database.py  kegtron.db  scan.py  seed_data.py
src/data/: devices.py
src/db/: __init__.py  devices.py  ports.py
src/kegtron/: __init__.py  gatt.py  parser.py
src/lib/: config.py  exceptions.py  json.py  logging.py  time.py  units.py  util.py
src/models/: __init__.py  device.py
src/routes/: __init__.py  devices.py  internal.py  ports.py  public.py  rpc.py
src/schemas/: base.py  devices.py  ports.py  rpc.py
src/services/: devices.py
src/static/: config.html  index.html  style.css
test/: conftest.py
test/api/: conftest.py  test_devices.py  test_ports.py  test_public.py  test_rpc.py
test/unit/: test_kegtron_parser.py  test_units.py  test_util.py
